--- a/shop-2/style.css
+++ b/shop-2/style.css
@@ -4,6 +4,8 @@ box-sizing: border-box;
 
 body {
     font-family: 'roboto', sans-serif;
+    background-image: url('images/patt.png');
+    background-color: rgb(102, 206, 255);
 }
 
 .container {
@@ -26,6 +28,8 @@ header {
 
 .row {
     display: flex;
+    margin-left: -15;
+    margin-right: -15;
 }
 
 [class*='col-']{
@@ -49,7 +53,7 @@ header {
 }
 
 .col-4 {
-    flex: 0 0 33.3333%ж
+    flex: 0 0 33.3333%;
     max-width: 33.3333%;
 }
 
@@ -57,7 +61,9 @@ header {
     flex: 0 0 15%;
     max-width: 15%;
 }
-
 .header {
-
+    background-color: rgba(255, 255, 255,.75);
+    height: 100px;
+    display: flex;
+    align-items: center;
 }
